# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.59 2014/04/06 17:23:55 dankogai Exp $
#
$Revision: 2.59 $ $Date: 2014/04/06 17:23:55 $
! Unicode/Unicode.xs
  Addressed: sign extension issue found by Coverity #21
  https://github.com/dankogai/p5-encode/issues/21
! Encode/encode.h Encode.xs Unicode/Unicode.xs
  removed #define U8 U8
  https://rt.perl.org/Ticket/Display.html?id=121554
  http://perl5.git.perl.org/perl.git/commit/2f2b4ff2c154a8e461857f2e82cb815c238d0d94

2.59 2014/04/06 17:23:55
! Byte/Makefile.PL
  CN/Makefile.PL
  EBCDIC/Makefile.PL
  Encode.pm
  Encode.xs
  Encode/Makefile_PL.e2x
  JP/Makefile.PL
  KR/Makefile.PL
  Symbol/Makefile.PL
  TW/Makefile.PL
  bin/enc2xs
  Restored the signature of Encode_XSEncoding() to address RT#94478
  * While https://github.com/dankogai/p5-encode/pull/20
    pulls the symnames via argument thus breaks the compatibility
    with Encode::XX modules with *.ucm, the restored version
    pulls the symanmes via enc->name[0] so the added 2nd argument
    is no longer needed.
  https://rt.cpan.org/Public/Bug/Display.html?id=94478

2.58 2014/03/28 02:37:42
! bin/piconv
  Addressed: piconv bug of decoding UTF-16 (with fix)
  https://github.com/dankogai/p5-encode/issues/19
! Byte/Makefile.PL
  CN/Makefile.PL
  EBCDIC/Makefile.PL
  Encode.pm
  Encode.xs
  Encode/Makefile_PL.e2x
  JP/Makefile.PL
  KR/Makefile.PL
  Symbol/Makefile.PL
  TW/Makefile.PL
  bin/enc2xs
  Pulled: Remap symname [RT #94221]
  https://github.com/dankogai/p5-encode/pull/20
  https://rt.cpan.org/Public/Bug/Display.html?id=94221
! Encode.pm
  Pulled: [doc] clarify that CHECK coderefs return octets #18
  https://github.com/dankogai/p5-encode/pull/18

2.57 2014/01/03 04:52:36
! encengine.c
  Pulled: sun compiler (maybe others) doesn't like UTF-8 in the source
  https://github.com/dankogai/p5-encode/pull/17
! bin/enc2xs
  Merged RT#91763: POD errors
  https://rt.cpan.org/Ticket/Display.html?id=91763

2.56 2013/12/22 13:40:00
! Encode.pm t/Encode.t